eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
/* ... */
@media screen and (min-width: 992px) { .eaton-landing-hero { height: 41.66667vw; }
  .eaton-landing-hero__slide-item { height: 41.66667vw; }
  .eaton-landing-hero__caption { padding: 0 100px; } }

@media screen and (min-width: 1200px) { .eaton-landing-hero:hover .eaton-landing-hero__arrow { display: block !important; }
  .eaton-landing-hero__slide-list__cta { margin-top: 60px; } }

/*
.eaton-landing-hero--single {

  .eaton-landing-hero__slide {

    &__caption {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      bottom: auto;
    }

    &__separator {
      width: 5%;
      height: 2px;
      background: $color__white;
      margin: 20px auto;
    }
  }



}
*/
.featured-story-component { margin: 60px 0; }

.featured-story-component .rendition__image { width: 100%; }

.featured-story-component__content { padding: 60px 50px; }

.featured-story-component__text { color: #FFF; padding-top: 30px; }

.featured-story-component__row--nopadding { padding: 0; }

.featured-story-component__arrow::before { font-size: 0.7em; left: 10px; }

.featured-story-component__title { color: #FFF; }

.featured-story-component__link:hover, .featured-story-component__link:active, .featured-story-component__link:focus { text-decoration: none; color: #FFF; }

.featured-story-component__link h2.featured-story-component__text::after { color: #FFF; margin-left: 20px; content: "\e258"; font-family: 'Glyphicons Halflings'; font-style: normal; font-weight: normal; font-size: 2.4rem; }

.featured-story-component__blue { position: absolute; top: 0; height: 100%; background-color: rgba(0, 94, 184, 0.8); color: #FFF; padding: 0; }

.featured-story-component__blue--right { right: 0; }

.featured-story-component__blue--left { left: 0; }

@media screen and (max-width: 767px) { .featured-story-component__blue { position: relative; }
  .featured-story-component__content { padding: 30px 40px; }
  .featured-story-component__row { padding-bottom: 20px; } }

@media screen and (min-width: 768px) and (max-width: 991px) { .featured-story-component__text { padding-top: 15px; width: 250px; }
  .featured-story-component__content { padding: 60px 30px 60px 50px; } }

.tile-link-component { margin: 60px 0; }

@media screen and (min-width: 768px) { .tile-link-component__container { padding: 0 15px; } }

.tile-link-component__copy { padding: 60px 0; }

.tile-link-component__element { color: #FFF; margin-left: 30px; margin-bottom: 30px; height: 240px; position: relative; padding: 0; }

.tile-link-component__element:hover, .tile-link-component__element:active, .tile-link-component__element:focus { color: #FFF; text-decoration: none; }

.tile-link-component__element--0 { background-color: #005EB8; margin-left: 0; }

.tile-link-component__element--1 { background-color: #5B6770; }

.tile-link-component__element--2 { background-color: #00B2A9; }

.tile-link-component__element--3 { background-color: #ED8B00; margin-left: 0; }

.tile-link-component__element--4 { background-color: #005EB8; }

.tile-link-component__element--5 { background-color: #333F48; }

.tile-link-component__icon { position: absolute; width: 72px; bottom: 80px; color: #FFF; left: 30px; }

.tile-link-component__image { width: 100%; }

.tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 10px 30px 25px; font-size: 2.8rem; }

@media screen and (max-width: 479px) { .tile-link-component__title { width: 86vw; } }

@media screen and (min-width: 768px) { .tile-link-component__title { font-size: 3.2rem; padding: 20px 30px; } }

.tile-link-component__title--background { background-color: #333F48; opacity: 0.7; }

@media screen and (max-width: 767px) { .tile-link-component__title--background { padding: 15px 30px; } }

.tile-link-component__arrow { font-size: 2.0rem; }

@media screen and (max-width: 991px) { .tile-link-component__element { margin-left: 0; } }

@media screen and (max-width: 767px) { .tile-link-component { margin: 0 15px; } }

@media screen and (min-width: 992px) { .tile-link-component__element { width: 31%; } }

.eaton-grid-control .tile-link-component { margin: 0; }

.eaton-grid-control .tile-link-component.container { width: 100%; }

@media screen and (max-width: 991px) { .eaton-grid-control .tile-link-component.container { padding: 0 15px; } }

.eaton-grid-control .tile-link-component__container { padding: 0; }

.eaton-grid-control .tile-link-component__element { margin-left: 0; }

.eaton-grid-control .tile-link-component .col-md-3 { width: 100%; }

.eaton-ttil-image-list { margin: 30px 0; }

.eaton-ttil-image-list__item { padding: 0 10px; }

.eaton-ttil-image-list__content { display: block; text-align: center; position: relative; }

.eaton-ttil-image-list__image { position: relative; }

.eaton-ttil-image-list__image-headline { margin-top: 30px; font-weight: bold; }

.eaton-ttil-image-list .headline-link { color: #005EB8; }

@media screen and (max-width: 991px) { .eaton-ttil-image-list__container { display: block; }
  .eaton-ttil-image-list__item { -webkit-flex-basis: 100%; -ms-flex-preferred-size: 100%; flex-basis: 100%; padding: 0 10px; margin-bottom: 30px; }
  .eaton-ttil-image-list__item:last-child { margin-bottom: 0; }
  .eaton-ttil-image-list__content { text-align: center; }
  .eaton-ttil-image-list__image { max-width: 480px; min-width: 250px; margin: 0 auto; }
  .eaton-ttil-image-list__image img { display: inline-block; }
  .eaton-ttil-image-list__image-headline { text-align: center; } }
/* ... */

